--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,4 @@
 <h1>Welcome to Finance Tracker Application</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
-
+<p>Create a welcome page</p>
 <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
 
